# eloquently_absurd

./: .gitignore  Cargo.toml
apps/image-to-sound/: Cargo.toml
apps/image-to-sound/src/: audio_writer.rs  main.rs
apps/sound-to-image/: Cargo.toml
apps/sound-to-image/src/: fft.rs  helpers.rs  main.rs  recorder.rs  simple_shader.rs  ui.rs
apps/synchronizer/: pyproject.toml  synchronizer.maxpat
apps/synchronizer/app/: audio_processing.py  audio_stream.py  audio_utils.py  logger.py  main.py  osc_sender.py  shared_resources.py
apps/syncronizer/: reference-genarator.maxpat  syncronizer.maxpat
audio/: eloquently_absurd_audio.cpr  eloquently_absurd_audio.csh
audio/Images/: voice.peak
prototypes/bevy-simple-white-noise-graphics/: Cargo.toml
prototypes/nannou-export-noise-audio/: Cargo.toml
prototypes/nannou-read-bit-maps/: Cargo.toml
prototypes/nannou-simple-white-noise-graphics/: Cargo.toml
prototypes/playback-position-detector/: app.py  compare_static_audio_buffers.py  cross_correlation_with_gpu.py  pyproject.toml  realtime_fft_cross_correlation.py  realtime_fft_cross_correlation_with_gpu.py  simple_cross_correlation.py  static_fft_cross_correlation.py
prototypes/realtime-sound-to-image/: Cargo.toml
prototypes/simple-shader/: Cargo.toml
prototypes/simple-shader-image/: Cargo.toml
prototypes/static-sound-to-image/: Cargo.toml
prototypes/static-waveform-visualizer/: Cargo.toml
prototypes/waveform-visualizer/: Cargo.toml
prototypes/waveform-visualizer-wgpu/: Cargo.toml
scripts/: bulk_convert_images_to_sound.zsh  combine_audio_files.zsh
(+23 files in other folders)
